Finish coc.nvim setup

--- a/_posts/2023-09-26-coc_nixos.md
+++ b/_posts/2023-09-26-coc_nixos.md
@@ -1,8 +1,76 @@
 ---
-title: coc.nvim Language Server with neovim
+title: coc.nvim Language Server with Neovim
 date: 2023-09-26 10:00:00 -0400
 categories: [Programming, Configuration]
 tags: [nixos, neovim] # TAG names should always be lowercase
 ---
 
 After writing the last blog on how to setup a Linux Kernel Development environment, I realized I haven't written how I've setup Neovim with coc.nvim in NixOS.
+
+## What is Neovim
+
+Neovim is a powerful and extensible text editor. Neovim is a fork of Vim7. One of its strengths is its support for plugins that enhance its functionality. Coc.nvim is one such plugin that brings powerful language server protocol (LSP) support to Neovim, making it an excellent choice for programming and text editing tasks.
+
+## Neovim in NixOS
+
+First, we list `neovim` as one of the packages, eg.
+
+```nix
+{
+  # ...
+  environment.systemPackages = with pkgs; [
+    # ...
+    nodejs
+  ];
+  # ...
+}
+```
+
+If you would like to get `clangd`, `rust-analyzer`, and `java` language server, remember to add the following:
+
+```nix
+      clang_16
+      clang-tools_16
+      jdk
+```
+
+## Neovim Configurations
+
+### Install Vim-Plug
+
+Simply run the following command to install `Vim-Plug`, a plugin manager.
+
+```bash
+sh -c 'curl -fLo "${XDG_DATA_HOME:-$HOME/.local/share}"/nvim/site/autoload/plug.vim --create-dirs \
+       https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim'
+```
+
+### Init.vim
+
+Open the `Neovim` configuration file. This is typically located at `~/.config/nvim/init.vim`, create one if it doesn't exist.
+
+Inside `init.vim`, add in the `coc-nvim` plugin:
+
+```vim
+call plug#begin('~/.config/nvim/plugged')
+Plug 'neoclide/coc.nvim', {'branch': 'release'}
+
+call plug#end()
+```
+
+Save and run `:PlugInstall` to install the plugin. Then run `:CocConfig` which changes `coc-settings.json`, to make `clangd` and `rust-analyzer` work, we need to add the following:
+
+```json
+{
+  "clangd.path": "/etc/profiles/per-user/yourusername/bin/clangd",
+  "rust-analyzer.server.path": "/etc/profiles/per-user/yourusername/bin/rust-analyzer"
+}
+```
+
+I also usually add format file on save setting:
+
+```json
+{
+  "coc.preferences.formatOnSaveFiletypes": ["*"]
+}
+```
