Finish reverse array post

--- a/_posts/2023-09-26-coc_nixos.md
+++ b/_posts/2023-09-26-coc_nixos.md
@@ -74,3 +74,7 @@ I also usually add format file on save setting:
   "coc.preferences.formatOnSaveFiletypes": ["*"]
 }
 ```
+
+### Dotfiles
+
+Check out my [dotfiles](https://github.com/sogood99/dotfiles).
